--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,9 @@
 }
 
 body {
-  background-image: url(https://img.freepik.com/vector-premium/marco-azul-hecho-huellas-patas-mascota-corazones-ilustracion-vectorial_104589-841.jpg);
-  background-size: cover;
+  /*background-image: url(https://img.freepik.com/vector-premium/marco-azul-hecho-huellas-patas-mascota-corazones-ilustracion-vectorial_104589-841.jpg);
+  background-size: cover;*/
+  background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
 }
 
 /*CARRUSEL*/
@@ -35,10 +36,10 @@ body {
 }
 
 .carousel img {
-  width: 95%;
+  width: 100%;
   height: 650px;
   align-items: center;
-  margin-left: 3%;
+  margin-left: 0 5%;
 }
 
 @keyframes slide {
@@ -75,17 +76,22 @@ body {
   float: left;
   padding-left: 5%;
   text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
+  animation-duration: 2s;
 }
 
 /*BARRA DE NAVEGACION*/
-.navbar {
+#navbar {
+  display: none;
+}
+
+.navbar-grande {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
 nav ul {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-around;
 }
 
 nav li {
@@ -137,14 +143,15 @@ h2 {
   font-size: 100px;
   padding-top: 5%;
   padding-bottom: 2%;
-  background-color: rgba(218, 252, 236, 0.8);
+  background-color: rgba(207, 207, 207, 0.9);
+  width: 100%;
 }
 
 .descuento {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: rgba(218, 252, 236, 0.8);
+  background: transparent;
   padding: 0 2%;
 }
 
@@ -167,6 +174,7 @@ h2 {
   padding-bottom: 5%;
   padding-top: 2%;
   font-size: 19px;
+  border-radius: 10px;
 }
 
 .producto img {
@@ -220,7 +228,7 @@ h2 {
 #veterinarias {
   width: 100%;
   height: 90%;
-  background-color: rgba(218, 252, 236, 0.8);
+  background-color: transparent;
   padding-top: 5%;
   padding-bottom: 5%;
   display: flex;
@@ -236,7 +244,7 @@ h2 {
   color: #ffffff;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 2%;
-  padding: 5%;
+  padding-bottom: 20%;
 }
 
 #veterinarias p {
@@ -249,20 +257,10 @@ h2 {
   height: 400px;
 }
 
-h3 {
-  text-align: center;
-  color: rgb(20, 46, 37);
-  font-family: "Baskervville SC", serif;
-  font-weight: 400px;
-  font-size: 40px;
-  padding-top: 5%;
-}
-
-h4 {
+#veterinarias h4 {
   text-align: center;
   color: rgb(223, 248, 80);
   font-family: "Baskervville SC", serif;
-  font-weight: 400px;
   font-size: 30px;
   padding-bottom: 5%;
 }
@@ -274,17 +272,18 @@ h4 {
   grid-template-rows: 350px 350px;
   grid-template-columns: 50% 50%;
   grid-template-areas: "a1 a2" "a1 a3" "a1 a4";
-  background-color: rgba(218, 252, 236, 0.8);
+  background-color: transparent;
   padding: 8% 0%;
 }
 
 #grid-nosotros img {
-  width: 400px;
+  width: 490px;
   height: 300px;
+  margin-bottom: 8%;
 }
 
 #grid-nosotros p {
-  color: #000007;
+  color: #ffffff;
   font-size: 35px;
 }
 
@@ -337,7 +336,7 @@ h4 {
   justify-content: space-around;
   padding-right: 25%;
   padding-bottom: 5%;
-  background-color: rgba(218, 252, 236, 0.8);
+  background-color: transparent;
 }
 
 .productos {
@@ -350,10 +349,8 @@ h4 {
   padding-bottom: 15%;
   padding-top: 5%;
   align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
+  padding-left: 15%;
+  border-radius: 10px;
 }
 
 .productos p {
@@ -365,63 +362,197 @@ h4 {
   height: 300px;
 }
 
-@media (max-width: 1000px) {
+.sector1 .productos:hover {
+  transform: scale(1.1);
+}
+
+.sector2 .productos:hover {
+  transform: scale(1.1);
+}
+
+/* RESPONSIVE  */
+@media (max-width: 900px) {
   /* NAVBAR*/
-  .navbar {
+  #navbar {
     display: flex;
-    flex-direction: column;
+  }
+  #container-fluid {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  .navbar h1 {
+    font-size: 30px;
+  }
+  .navbar-grande {
+    display: none;
+  }
+  .offcanvas-body {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  .offcanvas-header {
+    background-color: rgba(169, 233, 206, 0.9);
+  }
+  .nav-item :hover {
+    border-radius: 20px;
+    background-color: rgba(102, 243, 173, 0.7);
+    transition: 1s;
+  }
+  /* CARROUSEL  */
+  .carousel {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding: 0%;
+    margin: 0%;
+  }
+  .carousel ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 15s infinite alternate ease-in-out;
+  }
+  .carousel li {
+    width: 100%;
+    list-style: none;
+    position: relative;
+  }
+  .carousel img {
+    width: 100%;
+    height: 640px;
+    align-items: center;
+    margin-left: 3%;
+  }
+  @keyframes slide {
+    0% {
+      margin-left: 0;
+    }
+    20% {
+      margin-left: 0;
+    }
+    25% {
+      margin-left: -100%;
+    }
+    45% {
+      margin-left: -100%;
+    }
+    50% {
+      margin-left: -200%;
+    }
+    70% {
+      margin-left: -200%;
+    }
+    75% {
+      margin-left: -300%;
+    }
+    100% {
+      margin-left: -300%;
+    }
+  }
+  /* DESCUENTO  */
+  h2 {
+    font-size: 60px;
+  }
+  .descuento {
+    display: flex;
     justify-content: center;
-  }
-  nav li {
-    font-size: 12px;
-  }
-  .titulo {
-    font-size: 40px;
+    flex-direction: column;
+    background-color: rgba(218, 252, 236, 0.8);
+    padding: 0% 2%;
   }
   .lista {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .producto {
+    margin-bottom: 5%;
+    width: 500px;
+    height: 500px;
+  }
+  .producto img {
+    width: 350px;
+    height: 340px;
+  }
+  .producto p {
+    font-size: 120%;
+  }
+  /* FOOTER*/
+  .footer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
   }
-  .producto {
-    margin: 5%;
-  }
-  #descuento {
-    align-items: center;
-    margin: 1%;
-  }
-  /* FOOTER*/
   .footer p {
-    font-size: 12px;
+    font-size: 20px0px;
+    text-align: center;
+  }
+  .footer ul li {
+    list-style: none;
+    text-align: center;
   }
   .mapa p {
     text-align: center;
     padding: 5px;
-    font-size: 15PX;
+    font-size: 20px;
   }
   .mapa iframe {
-    width: 180px;
-    height: 110px;
+    width: 100%;
+    height: 200px;
+  }
+  .redes {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
   /*VETERINARIA*/
+  .vet-titulo {
+    margin-top: 25%;
+    padding-top: 20px;
+  }
   #veterinarias section img {
-    width: 500px;
-    height: 300px;
+    width: 100%;
+    height: 200px;
+    margin: 0;
   }
   #veterinarias section {
-    width: 600px;
+    width: 100%;
     height: 450px;
     padding-bottom: 50%;
   }
   #veterinarias p {
     margin-top: 2%;
-    font-size: 13px;
+    font-size: 20px;
   }
   /*ABOUT US*/
+  #grid-nosotros {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
   #grid-nosotros p {
     padding-left: 5%;
+    font-size: 20px;
+    text-align: center;
+  }
+  #grid-nosotros .picture {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  #grid-nosotros .picture img {
+    margin: 2%;
+    width: 300px;
+    height: 180px;
+    align-items: center;
   }
   /*REFUGIOS*/
+  #carouselExampleSlidesOnly {
+    height: 350px;
+    width: 100%;
+    margin-right: 5%;
+  }
   .flex-container {
     display: flex;
     flex-direction: column;
@@ -437,20 +568,20 @@ h4 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin-top: 10%;
   }
   #product-container .productos {
     justify-content: center;
     padding-top: 20%;
-    margin-left: 20%;
+    margin-left: 15%;
+    width: 100%;
   }
   #product-container .productos p {
     margin: 5% 2%;
   }
-}
-@media (max-width: 600px) {
-  /* NAVBAR*/
-  nav li {
-    font-size: 8 px;
+  #product-container .productos img {
+    width: 250px;
+    height: 150px;
   }
 }
 
