--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,186 +1,196 @@
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     font-family: "Baskervville SC", serif;
     box-sizing: border-box;
-    
-}
-
-body{
-    background-image: url(https://img.freepik.com/vector-premium/marco-azul-hecho-huellas-patas-mascota-corazones-ilustracion-vectorial_104589-841.jpg);
-    background-size:cover;
- 
-}
-
-
-
-/*CARRUSEL*/
-.carousel{
+  }
+  
+  body {
+    /*background-image: url(https://img.freepik.com/vector-premium/marco-azul-hecho-huellas-patas-mascota-corazones-ilustracion-vectorial_104589-841.jpg);
+    background-size: cover;*/
+    background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
+  }
+  
+  /*CARRUSEL*/
+  .carousel {
     width: 100%;
     height: 100%;
     overflow: hidden;
     padding: 0%;
     margin: 0%;
-   
-}
-
-.carousel ul{
+  }
+  
+  .carousel ul {
     display: flex;
     padding: 0;
     width: 400%;
     animation: slide 15s infinite alternate ease-in-out;
-}
-.carousel li{
+  }
+  
+  .carousel li {
     width: 100%;
     list-style: none;
     position: relative;
-}
-.carousel img{
-   width: 95%;
-   height: 650px;
-   align-items: center;
-   margin-left: 3%;
-}
-@keyframes slide {
-    0% { margin-left: 0; } 
-    20% { margin-left: 0; } 
-
-    25% { margin-left: -100%; } 
-    45% { margin-left: -100%; }
-
-    50% { margin-left: -200%; } 
-    70% { margin-left: -200%; }  
-
-    75% { margin-left: -300%; } 
-    100% { margin-left: -300%; }
-
-}
-
-/*TITULO*/
-
-
-.titulo{
+  }
+  
+  .carousel img {
+    width: 100%;
+    height: 650px;
+    align-items: center;
+    margin-left: 0 5%;
+  }
+  
+  @keyframes slide {
+    0% {
+      margin-left: 0;
+    }
+    20% {
+      margin-left: 0;
+    }
+    25% {
+      margin-left: -100%;
+    }
+    45% {
+      margin-left: -100%;
+    }
+    50% {
+      margin-left: -200%;
+    }
+    70% {
+      margin-left: -200%;
+    }
+    75% {
+      margin-left: -300%;
+    }
+    100% {
+      margin-left: -300%;
+    }
+  }
+  /*TITULO*/
+  .titulo {
     font-size: 65px;
     color: #66f3ad;
     text-align: center;
     float: left;
     padding-left: 5%;
     text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
-    
+    animation-duration: 2s;
+  }
+  
+  /*BARRA DE NAVEGACION*/
+#navbar{
+    display: none;
 }
 
-
-
-
-
-
-/*BARRA DE NAVEGACION*/
-
-.navbar{
+  .navbar-grande{
     background-color: rgba(0, 0, 0, 0.9);
-}
 
-nav ul{
+  }
+  
+  nav ul {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-}
-
-nav li{
+    justify-content:space-around;
+  }
+  
+  nav li {
     text-align: center;
-    padding:  2px 15px;
+    padding: 2px 15px;
     font-family: "Baskervville SC", serif;
     font-weight: 400;
     font-style: normal;
     float: right;
     border-left: 1px white solid;
     font-size: 18px;
-}
-
-
-
-/*BOTONES*/
-.fill:focus,.fill:hover{
-    box-shadow:inset 0 0 0 2em var(--hover) 
-   
-}
-.fill{
+  }
+  
+  /*BOTONES*/
+  .fill:focus, .fill:hover {
+    box-shadow: inset 0 0 0 2em var(--hover);
+  }
+  
+  .fill {
     font-size: 17px;
     --color:#ffffff;
     --hover: #66f3ad;
-}
-button{
-    color:var(--color);
-    transition:.25s
-}
-button:focus,button:hover{
-    border-color:var(--hover);
-    color:#000007
-}
-
-.radius{
-    background:0 0; 
-    font:inherit;
-    line-height:1;
-    margin:.5em;
-    padding:1em 2em;
+  }
+  
+  button {
+    color: var(--color);
+    transition: 0.25s;
+  }
+  
+  button:focus, button:hover {
+    border-color: var(--hover);
+    color: #000007;
+  }
+  
+  .radius {
+    background: 0 0;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
     border-radius: 20px;
-}
-
- 
-/*DESCUENTO*/
-h2{
+  }
+  
+  /*DESCUENTO*/
+  h2 {
     text-align: center;
     font-family: "Baskervville SC", serif;
     font-weight: 400px;
-    font-size: 100px; 
+    font-size: 100px;
     padding-top: 5%;
     padding-bottom: 2%;
-    background-color: rgba(218, 252, 236, 0.8);
-   
-}
-.descuento{
+    background-color: rgba(207, 207, 207, 0.9);
+    width: 100%;
+
+  }
+  
+  .descuento {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: rgba(218, 252, 236, 0.8);
+    background: transparent;
     padding: 0 2%;
-   
-}
-.lista{
+  }
+  
+  .lista {
     padding-top: 5%;
     padding-bottom: 5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-
-.producto{
-   width: 280px;
-   height: 400px;
-   background-color: #ffffff;
-   text-align: center;
-   padding-left: 1%;
-   padding-right: 1%;
-   padding-bottom: 5%;
-   padding-top: 2%;
-   font-size: 19px;
-}
-.producto img{
+   
+  }
+  
+  .producto {
+    width: 280px;
+    height: 400px;
+    background-color: #ffffff;
+    text-align: center;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 5%;
+    padding-top: 2%;
+    font-size: 19px;
+    border-radius: 10px;
+  }
+  
+  .producto img {
     width: 190px;
     height: 210px;
-}
-
-.producto:hover{
-   transform: scale(1.1);
-}
-
-
-/*FOOTER*/
-.footer{
+  }
+  
+  .producto:hover {
+    transform: scale(1.1);
+  }
+  
+  /*FOOTER*/
+  .footer {
     background-color: rgba(0, 0, 0, 0.8);
     color: #ffffff;
     margin-top: 5%;
@@ -191,38 +201,37 @@ h2{
     flex-direction: row;
     justify-content: space-around;
     text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
-}
-.footer p{
+  }
+  
+  .footer p {
     font-size: 20px;
-}
-
-.footer ul li{
-    list-style:none;
-}
-
-.mapa p{
+  }
+  
+  .footer ul li {
+    list-style: none;
+  }
+  
+  .mapa p {
     text-align: center;
     padding: 5px;
-
-}
-
-.mapa iframe{
+  }
+  
+  .mapa iframe {
     width: 300px;
     height: 200px;
-}
-
-.redes{ 
+  }
+  
+  .redes {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
-
- /*VETERINARIAS*/ 
-
- #veterinarias{
+  }
+  
+  /*VETERINARIAS*/
+  #veterinarias {
     width: 100%;
     height: 90%;
-    background-color: rgba(218, 252, 236, 0.8);
+    background-color: transparent;
     padding-top: 5%;
     padding-bottom: 5%;
     display: flex;
@@ -230,256 +239,395 @@ h2{
     justify-content: center;
     align-items: center;
     text-align: center;
- }
+  }
 
-#veterinarias section{
+ 
+   
+  
+  #veterinarias section {
     width: 700px;
     height: 550px;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.5);
     margin: 2%;
-    padding: 5%;
-   
-}
-
-#veterinarias p{
+    padding-bottom: 20%;
+  }
+  
+  #veterinarias p {
     margin-top: 5%;
     font-size: 20px;
-}
-
-#veterinarias section img{
+  }
+  
+  #veterinarias section img {
     width: 600px;
     height: 400px;
-}
+  }
+  
 
-h3{
-    text-align: center;
-    color: rgb(20, 46, 37);
-    font-family: "Baskervville SC", serif;
-    font-weight: 400px;
-    font-size: 40px;
-    padding-top: 5%;
-} 
-
-h4{
+  
+  #veterinarias h4 {
     text-align: center;
     color: rgb(223, 248, 80);
     font-family: "Baskervville SC", serif;
-    font-weight: 400px;
     font-size: 30px;
     padding-bottom: 5%;
-}
-
-
-/*SOBRE NOSOTROS*/
-
-#grid-nosotros{
+  }
+  
+  /*SOBRE NOSOTROS*/
+  #grid-nosotros {
     display: grid;
     height: 90%;
     grid-template-rows: 350px 350px;
     grid-template-columns: 50% 50%;
-    grid-template-areas: "a1 a2"
-                         "a1 a3"
-                         "a1 a4";
-    background-color: rgba(218, 252, 236, 0.8);
+    grid-template-areas: "a1 a2" "a1 a3" "a1 a4";
+    background-color: transparent;
     padding: 8% 0%;
-
-
-}
-
-#grid-nosotros img{
-    width: 400px;
+  }
+  
+  #grid-nosotros img {
+    width: 490px;
     height: 300px;
-}
-#grid-nosotros p{
-    color: #000007;
+    margin-bottom: 8%;
+  }
+  
+  #grid-nosotros p {
+    color: #ffffff;
     font-size: 35px;
-}
-.img-uno{
+  }
+  
+  .img-uno {
     grid-area: a2;
     margin-left: 15%;
-}
-
-.img-dos{
+  }
+  
+  .img-dos {
     grid-area: a3;
-}
-.img-tres{
+  }
+  
+  .img-tres {
     grid-area: a4;
     margin-left: 15%;
-}
-.parrafo{
+  }
+  
+  .parrafo {
     grid-area: a1;
-} 
-
-
-/*REFUGIOS*/
-.faster .carousel-inner{
+  }
+  
+  /*REFUGIOS*/
+  .faster .carousel-inner {
     transition: 10s;
-}
-
-.flex-container{
+  }
+  
+  .flex-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-top: 5%;
-}
-
-.flex-container .btn{
+  }
+  
+  .flex-container .btn {
     background-color: #040453;
     color: #ffffff;
-}
-
-.flex-container .btn:hover{
+  }
+  
+  .flex-container .btn:hover {
     background-color: #66f3ad;
     color: #040453;
-}
-
-
-
-/*PRODUCTOS*/
-
-#product-container{
+  }
+  
+  /*PRODUCTOS*/
+  #product-container {
     width: 100%;
     height: 90%;
     display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   padding-right:  25%;
-   padding-bottom: 5%;
-   background-color: rgba(218, 252, 236, 0.8);
-
-}
-
-
-.productos{
+    flex-direction: row;
+    justify-content: space-around;
+    padding-right: 25%;
+    padding-bottom: 5%;
+    background-color: transparent
+  }
+  
+  .productos {
     background-color: rgba(9, 10, 10, 0.9);
     width: 350px;
     height: 400px;
-    margin-left: 60%;  
+    margin-left: 60%;
     margin-top: 10%;
     color: #ffffff;
     padding-bottom: 15%;
     padding-top: 5%;
     align-items: center;
+    padding-left: 15%;
+    border-radius: 10px;
+   
+  }
+  
+  .productos p {
+    margin-top: 3%;
+  }
+  
+  #product-container img {
+    width: 250px;
+    height: 300px;
+  }
+
+  .sector1 .productos:hover{
+    transform: scale(1.1);
+  }
+
+  .sector2 .productos:hover{
+    transform: scale(1.1);
+  }
+
+  /* RESPONSIVE  */
+  
+  @media (max-width: 900px){ 
+
+     /* NAVBAR*/
+
+    #navbar{
+        display:flex;
+       
+    } 
+
+    #container-fluid{
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+    .navbar h1{
+        font-size: 30px;   
+     }
+    .navbar-grande{
+        display: none;
+
+    }
+    .offcanvas-body{
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+    .offcanvas-header{
+        background-color: rgba(169, 233, 206, 0.9);
+    }
+
+    .nav-item :hover{
+        border-radius: 20px;
+        background-color: rgba(102, 243, 173, 0.7);
+        transition: 1s;
+
+    }
+
+    /* CARROUSEL  */
+
+    .carousel {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        padding: 0%;
+        margin: 0%;
+      }
+      
+      .carousel ul {
+        display: flex;
+        padding: 0;
+        width: 400%;
+        animation: slide 15s infinite alternate ease-in-out;
+      }
+      
+      .carousel li {
+        width: 100%;
+        list-style: none;
+        position: relative;
+      }
+      
+      .carousel img {
+        width: 100%;
+        height: 640px;
+        align-items: center;
+        margin-left: 3%;
+      }
+      
+      @keyframes slide {
+        0% {
+          margin-left: 0;
+        }
+        20% {
+          margin-left: 0;
+        }
+        25% {
+          margin-left: -100%;
+        }
+        45% {
+          margin-left: -100%;
+        }
+        50% {
+          margin-left: -200%;
+        }
+        70% {
+          margin-left: -200%;
+        }
+        75% {
+          margin-left: -300%;
+        }
+        100% {
+          margin-left: -300%;
+        }
+      }
+
+/* DESCUENTO  */
+
+h2{
+    font-size: 60px;
+}
+.descuento {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(218, 252, 236, 0.8);
+    padding: 0% 2%;
+    
+  }
+  
+  .lista {
+    padding-top: 5%;
+    padding-bottom: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    text-align: center;
-    
-
-}
-.productos p{
-    margin-top: 3%;
-}
-
-#product-container img{
-    width: 250px;
-    height: 300px;
-}
-
-@media(max-width:1000px){
-    /* NAVBAR*/
-    .navbar{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    nav li{
-        font-size: 12px;
-    }
-    .titulo{
-        font-size: 40px;
-    }
-    .lista{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-       
-        
+    align-items: center;
     }
     .producto{
-        margin: 5%;
-    }
-    #descuento{
-        align-items: center;
-        margin: 1%;
-    }
-    /* FOOTER*/
-    .footer p{
-        font-size: 12px;
-    }
-    .mapa p{
-        text-align: center;
-        padding: 5px;
-        font-size: 15PX;
-    
-    }
-    
-    .mapa iframe{
-        width: 180px;
-        height: 110px;
-    }
-
-
-
-    /*VETERINARIA*/
-    #veterinarias section img{
+        margin-bottom: 5%;
         width: 500px;
-        height: 300px;
-    }
-    #veterinarias section{
-        width: 600px;
-        height: 450px;
-        padding-bottom: 50%;
-    }
-    #veterinarias p{
-        margin-top: 2%;
-        font-size: 13px;
+        height: 500px;
     }
 
-    /*ABOUT US*/
-    #grid-nosotros p{
-       padding-left: 5%;
+    .producto img{
+        width: 350px;
+        height: 340px;
+    }
+    .producto p{
+        font-size: 120%;
     }
 
-    /*REFUGIOS*/
 
-    .flex-container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    .flex-container .card{
-        margin: 5%;
-        justify-content: center;
-       
-    }
+    /* FOOTER*/
 
-    /*PRODUCTOS*/
-    #product-container{
+    .footer{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+
+    .footer p {
+        font-size: 20px0px;
+        text-align: center;
+      }
+      
+      .footer ul li {
+        list-style: none;
+        text-align: center;
+      }
+      
+      .mapa p {
+        text-align: center;
+        padding: 5px;
+        font-size: 20px;
+      }
+      
+      .mapa iframe {
+        width: 100%;
+        height: 200px;
+      }
+      
+      .redes {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+      } 
+
+    /*VETERINARIA*/
+
+    .vet-titulo{
+        margin-top: 25%;
+        padding-top: 20px;
+    }
+    
+
+    #veterinarias section img {
+      width: 100%;
+      height: 200px;
+      margin: 0;
+    }
+    #veterinarias section {
+      width: 100%;
+      height: 450px;
+      padding-bottom: 50%;
+    }
+
+    #veterinarias p {
+      margin-top: 2%;
+      font-size: 20px;
+
+    }
+    /*ABOUT US*/
+    #grid-nosotros{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    #grid-nosotros p {
+      padding-left: 5%;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    #grid-nosotros .picture{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+    }
+    #grid-nosotros .picture img{
+        margin: 2%;
+        width: 300px;
+        height: 180px;
         align-items: center;
     }
-    #product-container .productos{
-        justify-content: center;
-        padding-top: 20%;
-        margin-left: 20%;
 
-
+   
+    /*REFUGIOS*/
+    #carouselExampleSlidesOnly{
+        height: 350px;
+        width: 100%;
+        margin-right: 5%
     }
-    #product-container .productos p{
-        margin: 5% 2%;
+    .flex-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .flex-container .card {
+      margin: 5%;
+      justify-content: center;
+    }
+    /*PRODUCTOS*/
+    #product-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      margin-top: 10%;
+    }
+    #product-container .productos {
+      justify-content: center;
+      padding-top: 20%;
+      margin-left: 15%;
+      width: 100%;
+    }
+    #product-container .productos p {
+      margin: 5% 2%; 
     }
 
+    #product-container .productos img{
+        width: 250px;
+        height: 150px;
+    }
 }
-@media(max-width:600px){
-    /* NAVBAR*/
-     nav li{
-        font-size: 8  px;
-    }
-}
-
