--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
+@import "../scss/variables.scss" ;
+
+
 * {
     margin: 0;
     padding: 0;
@@ -7,11 +10,17 @@
     box-sizing: border-box;
   }
   
-  body {
-    /*background-image: url(https://img.freepik.com/vector-premium/marco-azul-hecho-huellas-patas-mascota-corazones-ilustracion-vectorial_104589-841.jpg);
-    background-size: cover;*/
-    background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
-  }
+    @if $este-curso-es-increible == True{ 
+        body { 
+            background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
+         }
+        }     
+    @else{
+        body{
+            background-color: #040453;
+
+        }
+    }     
   
   /*CARRUSEL*/
   .carousel {
@@ -178,6 +187,10 @@
     padding-top: 2%;
     font-size: 19px;
     border-radius: 10px;
+
+    &.producto:hover {
+        transform: scale(1.1);
+      }
   }
   
   .producto img {
@@ -185,9 +198,7 @@
     height: 210px;
   }
   
-  .producto:hover {
-    transform: scale(1.1);
-  }
+ 
   
   /*FOOTER*/
   .footer {
@@ -228,7 +239,18 @@
   }
   
   /*VETERINARIAS*/
-  #veterinarias {
+
+  @if $este-curso-es-increible == False{ 
+    #veterinarias {
+  background-color: #000007;
+  color: red;
+  font-size: 200px;
+    
+  }
+ }
+
+  @else if $este-curso-es-increible == True{
+    #veterinarias{
     width: 100%;
     height: 90%;
     background-color: transparent;
@@ -239,7 +261,16 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+}
   }
+  @else{
+    #veterinarias{
+        background-color: #040453;
+        color: #66f3ad;
+        font-size: 400px;
+}
+  }
+  
 
  
    
