--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
 }
 
 .navbar-grande {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 nav ul {
@@ -91,7 +91,6 @@ nav ul {
   flex-direction: row;
   justify-content: space-around;
 }
-
 nav li {
   text-align: center;
   padding: 2px 15px;
@@ -141,7 +140,7 @@ h2 {
   font-size: 100px;
   padding-top: 5%;
   padding-bottom: 2%;
-  background-color: rgba(207, 207, 207, 0.9);
+  background-color: rgba(207, 207, 207, 0.4);
   width: 100%;
 }
 
@@ -173,9 +172,11 @@ h2 {
   padding-top: 2%;
   font-size: 19px;
   border-radius: 10px;
+  transition: 0.5s;
 }
 .producto.producto:hover {
   transform: scale(1.1);
+  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
 }
 
 .producto img {
@@ -242,6 +243,7 @@ h2 {
   background-color: rgba(0, 0, 0, 0.5);
   margin: 2%;
   padding-bottom: 20%;
+  border-radius: 10px;
 }
 
 #veterinarias p {
@@ -252,6 +254,7 @@ h2 {
 #veterinarias section img {
   width: 600px;
   height: 400px;
+  border-radius: 10px;
 }
 
 #veterinarias h4 {
@@ -259,7 +262,8 @@ h2 {
   color: rgb(223, 248, 80);
   font-family: "Baskervville SC", serif;
   font-size: 30px;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
+  padding-top: 2%;
 }
 
 /*SOBRE NOSOTROS*/
@@ -337,7 +341,7 @@ h2 {
 }
 
 .productos {
-  background-color: rgba(9, 10, 10, 0.9);
+  background-color: rgba(47, 49, 49, 0.5);
   width: 350px;
   height: 400px;
   margin-left: 60%;
@@ -348,6 +352,7 @@ h2 {
   align-items: center;
   padding-left: 15%;
   border-radius: 10px;
+  transition: 0.5s;
 }
 
 .productos p {
@@ -357,14 +362,19 @@ h2 {
 #product-container img {
   width: 250px;
   height: 300px;
+  border-radius: 10px;
 }
 
 .sector1 .productos:hover {
   transform: scale(1.1);
+  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
+  color: black;
 }
 
 .sector2 .productos:hover {
   transform: scale(1.1);
+  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
+  color: black;
 }
 
 /* RESPONSIVE  */
