--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,21 +29,22 @@
     overflow: hidden;
     padding: 0%;
     margin: 0%;
+    
   }
-  
+
   .carousel ul {
     display: flex;
     padding: 0;
     width: 400%;
     animation: slide 15s infinite alternate ease-in-out;
   }
-  
+
   .carousel li {
     width: 100%;
     list-style: none;
     position: relative;
   }
-  
+
   .carousel img {
     width: 100%;
     height: 650px;
@@ -78,6 +79,7 @@
     }
   }
   /*TITULO*/
+  @if $color-primario == red{
   .titulo {
     font-size: 65px;
     color: #66f3ad;
@@ -87,33 +89,61 @@
     text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
     animation-duration: 2s;
   }
+}
+
+@else if $color-primario == blue{
+    .titulo{
+      font-size: 80px;
+      color: #040b4e;
+      text-align:justify;
+      float: right;
+      padding-left: 15%;
+
+  }
+}
+  @else{
+    .titulo{
+      font-size: 60px;
+      color: #fffb03;
+      text-align: left;
+      float: right;
+      padding-left: 40%;
+  }
+}
+
+
+
   
   /*BARRA DE NAVEGACION*/
 #navbar{
     display: none;
+
+    
 }
 
-  .navbar-grande{
-    background-color: rgba(0, 0, 0, 0.9);
+.navbar-grande{
+  background-color: rgba(0, 0, 0, 0.5);
 
+}
+  nav{
+     ul {
+      display: flex;
+      flex-direction: row;
+      justify-content:space-around;
   }
-  
-  nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
+
+    li {
+      text-align: center;
+      padding: 2px 15px;
+      font-family: "Baskervville SC", serif;
+      font-weight: 400;
+      font-style: normal;
+      float: right;
+      border-left: 1px white solid;
+      font-size: 18px;
   }
-  
-  nav li {
-    text-align: center;
-    padding: 2px 15px;
-    font-family: "Baskervville SC", serif;
-    font-weight: 400;
-    font-style: normal;
-    float: right;
-    border-left: 1px white solid;
-    font-size: 18px;
-  }
+}
+
   
   /*BOTONES*/
   .fill:focus, .fill:hover {
@@ -153,7 +183,7 @@
     font-size: 100px;
     padding-top: 5%;
     padding-bottom: 2%;
-    background-color: rgba(207, 207, 207, 0.9);
+    background-color: rgba(207, 207, 207, 0.4);
     width: 100%;
 
   }
@@ -187,9 +217,11 @@
     padding-top: 2%;
     font-size: 19px;
     border-radius: 10px;
+    transition: 0.5s;
 
     &.producto:hover {
         transform: scale(1.1);
+        background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
       }
   }
   
@@ -282,6 +314,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     margin: 2%;
     padding-bottom: 20%;
+    border-radius: 10px;
   }
   
   #veterinarias p {
@@ -292,6 +325,7 @@
   #veterinarias section img {
     width: 600px;
     height: 400px;
+    border-radius: 10px;
   }
   
 
@@ -301,7 +335,8 @@
     color: rgb(223, 248, 80);
     font-family: "Baskervville SC", serif;
     font-size: 30px;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
   }
   
   /*SOBRE NOSOTROS*/
@@ -379,7 +414,7 @@
   }
   
   .productos {
-    background-color: rgba(9, 10, 10, 0.9);
+    background-color: rgba(47, 49, 49, 0.5);
     width: 350px;
     height: 400px;
     margin-left: 60%;
@@ -390,6 +425,7 @@
     align-items: center;
     padding-left: 15%;
     border-radius: 10px;
+    transition: 0.5s;
    
   }
   
@@ -400,14 +436,19 @@
   #product-container img {
     width: 250px;
     height: 300px;
+    border-radius: 10px;
   }
 
   .sector1 .productos:hover{
     transform: scale(1.1);
+    background-image: linear-gradient( rgb(243, 127, 247), rgb(101, 247, 101));
+    color: black;
   }
 
   .sector2 .productos:hover{
     transform: scale(1.1);
+    background-image: linear-gradient( rgb(243, 127, 247), rgb(101, 247, 101));
+    color: black;
   }
 
   /* RESPONSIVE  */
