--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,11 @@
   list-style: none;
   text-decoration: none;
   font-family: "Baskervville SC", serif;
-  box-sizing: border-box;
 }
 
 body {
   background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
+  box-sizing: content-box;
 }
 
 /*CARRUSEL*/
@@ -16,8 +16,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  padding: 0%;
-  margin: 0%;
+  padding: 0% 2%;
 }
 
 .carousel ul {
@@ -35,9 +34,8 @@ body {
 
 .carousel img {
   width: 100%;
-  height: 650px;
+  height: 590px;
   align-items: center;
-  margin-left: 0 5%;
 }
 
 @keyframes slide {
@@ -84,12 +82,16 @@ body {
 
 .navbar-grande {
   background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 nav ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 nav li {
   text-align: center;
@@ -138,10 +140,12 @@ h2 {
   font-family: "Baskervville SC", serif;
   font-weight: 400px;
   font-size: 100px;
-  padding-top: 5%;
-  padding-bottom: 2%;
+  padding: 2% 0;
   background-color: rgba(207, 207, 207, 0.4);
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .descuento {
@@ -317,6 +321,7 @@ h2 {
   flex-direction: row;
   justify-content: space-around;
   margin-top: 5%;
+  margin-bottom: 8%;
 }
 
 .flex-container .btn {
@@ -470,16 +475,19 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
 
 .bt-form {
   background: #fc5c7d;
-  background: linear-gradient(to right, #6a82fb, #fc5c7d);
+  background: linear-gradient(to right, #3c55d1, #fc5c7d);
   display: block;
-  width: 150px;
-  height: 40px;
+  width: 200px;
+  height: 50px;
   border: none;
   color: white;
   border-radius: 4px;
-  font-size: 16px;
-  margin: 10px auto;
+  font-size: 20px;
+  margin: 20px auto 10px auto;
   cursor: pointer;
+}
+.bt-form a {
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1000px) {
