--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,12 +7,14 @@
     list-style: none;
     text-decoration: none;
     font-family: "Baskervville SC", serif;
-    box-sizing: border-box;
+   
+    
   }
   
     @if $este-curso-es-increible == True{ 
         body { 
             background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
+            box-sizing: content-box;
          }
         }     
     @else{
@@ -27,9 +29,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding: 0%;
-    margin: 0%;
-    
+    padding: 0% 2%;
   }
 
   .carousel ul {
@@ -37,6 +37,7 @@
     padding: 0;
     width: 400%;
     animation: slide 15s infinite alternate ease-in-out;
+  
   }
 
   .carousel li {
@@ -47,9 +48,10 @@
 
   .carousel img {
     width: 100%;
-    height: 650px;
+    height: 590px;
     align-items: center;
-    margin-left: 0 5%;
+    
+    
   }
   
   @keyframes slide {
@@ -123,13 +125,17 @@
 
 .navbar-grande{
   background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 
 }
   nav{
      ul {
       display: flex;
       flex-direction: row;
-      justify-content:space-around;
+      justify-content:space-between;
   }
 
     li {
@@ -154,6 +160,7 @@
     font-size: 17px;
     --color:#ffffff;
     --hover: #66f3ad;
+    
   }
   
   button {
@@ -164,6 +171,7 @@
   button:focus, button:hover {
     border-color: var(--hover);
     color: #000007;
+   
   }
   
   .radius {
@@ -181,10 +189,12 @@
     font-family: "Baskervville SC", serif;
     font-weight: 400px;
     font-size: 100px;
-    padding-top: 5%;
-    padding-bottom: 2%;
+    padding: 2% 0;
     background-color: rgba(207, 207, 207, 0.4);
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
   }
   
@@ -390,6 +400,7 @@
     flex-direction: row;
     justify-content: space-around;
     margin-top: 5%;
+    margin-bottom: 8%;
   }
   
   .flex-container .btn {
@@ -556,16 +567,19 @@
 
   .bt-form{
     background: #fc5c7d;
-    background: linear-gradient(to right, #6a82fb, #fc5c7d );
+    background: linear-gradient(to right, #3c55d1, #fc5c7d );
     display: block;
-    width: 150px;
-    height: 40px;
+    width: 200px;
+    height: 50px;
     border: none;
     color: white;
     border-radius: 4px;
-    font-size: 16px;
-    margin: 10px auto;
+    font-size: 20px;
+    margin: 20px auto 10px auto;
     cursor: pointer;
+    a{
+      text-decoration: none;
+    }
  }
 @media screen and (max-width:1000px) {
   .form{
