--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,19 +14,20 @@
     @if $este-curso-es-increible == True{ 
         body { 
             background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
-            box-sizing: content-box;
+            
          }
         }     
     @else{
         body{
             background-color: #040453;
+            box-sizing: content-box;
 
         }
     }     
   
   /*CARRUSEL*/
   .carousel {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     overflow: hidden;
     padding: 0% 2%;
@@ -83,13 +84,13 @@
   /*TITULO*/
   @if $color-primario == red{
   .titulo {
-    font-size: 65px;
+    font-size: 45px;
     color: #66f3ad;
     text-align: center;
     float: left;
-    padding-left: 5%;
     text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
     animation-duration: 2s;
+    padding: 2% 2%;
   }
 }
 
@@ -125,7 +126,7 @@
 
 .navbar-grande{
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -157,7 +158,7 @@
   }
   
   .fill {
-    font-size: 17px;
+   
     --color:#ffffff;
     --hover: #66f3ad;
     
@@ -166,6 +167,8 @@
   button {
     color: var(--color);
     transition: 0.25s;
+    font-size: 20px;
+    align-items: center;
   }
   
   button:focus, button:hover {
@@ -416,7 +419,6 @@
   /*PRODUCTOS*/
   #product-container {
     width: 100%;
-    height: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -609,8 +611,9 @@
 
 
   /* RESPONSIVE  */
+
   
-  @media (max-width: 900px){ 
+  @media (max-width: 1080px){ 
 
      /* NAVBAR*/
 
@@ -668,9 +671,7 @@
       
       .carousel img {
         width: 100%;
-        height: 640px;
         align-items: center;
-        margin-left: 3%;
       }
       
       @keyframes slide {
