--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -163,12 +163,24 @@
     --hover: #66f3ad;
     
   }
+
+  .nav{
+    ul{
+      li{
+        a{
+          padding-top: 2%;
+        }
+      }
+    }
+
+  }
   
   button {
     color: var(--color);
     transition: 0.25s;
     font-size: 20px;
     align-items: center;
+    
   }
   
   button:focus, button:hover {
@@ -179,10 +191,11 @@
   
   .radius {
     background: 0 0;
-    font: inherit;
+    font-size: inherit;
     line-height: 1;
-    margin: 0.5em;
+   
     padding: 1em 2em;
+    
     border-radius: 20px;
   }
   
