--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -164,28 +164,20 @@
     
   }
 
-  .nav{
-    ul{
-      li{
-        a{
-          padding-top: 2%;
-        }
-      }
-    }
 
-  }
-  
   button {
     color: var(--color);
     transition: 0.25s;
-    font-size: 20px;
+    font-size: 18px;
     align-items: center;
+    
     
   }
   
   button:focus, button:hover {
     border-color: var(--hover);
     color: #000007;
+    margin-top: 2%;
    
   }
   
@@ -193,11 +185,15 @@
     background: 0 0;
     font-size: inherit;
     line-height: 1;
-   
     padding: 1em 2em;
-    
     border-radius: 20px;
   }
+
+  .nav a{
+    margin-top: 2%;
+
+   }
+
   
   /*DESCUENTO*/
   h2 {
