--- a/css/styles.css
+++ b/css/styles.css
@@ -1,238 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
-  font-family: "Baskervville SC", serif;
-}
-
-body {
-  background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
-}
-
-/*CARRUSEL*/
-.carousel {
-  max-width: 100%;
-  height: 100%;
-  overflow: hidden;
-  padding: 0% 2%;
-}
-
-.carousel ul {
-  display: flex;
-  padding: 0;
-  width: 400%;
-  animation: slide 15s infinite alternate ease-in-out;
-}
-
-.carousel li {
-  width: 100%;
-  list-style: none;
-  position: relative;
-}
-
-.carousel img {
-  width: 100%;
-  height: 590px;
-  align-items: center;
-}
-
-@keyframes slide {
-  0% {
-    margin-left: 0;
-  }
-  20% {
-    margin-left: 0;
-  }
-  25% {
-    margin-left: -100%;
-  }
-  45% {
-    margin-left: -100%;
-  }
-  50% {
-    margin-left: -200%;
-  }
-  70% {
-    margin-left: -200%;
-  }
-  75% {
-    margin-left: -300%;
-  }
-  100% {
-    margin-left: -300%;
-  }
-}
-/*TITULO*/
-.titulo {
-  font-size: 55px;
-  color: #66f3ad;
-  text-align: center;
-  float: left;
-  text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
-  animation-duration: 2s;
-  padding-top: 1%;
-}
-
-/*BARRA DE NAVEGACION*/
-#navbar {
-  display: none;
-}
-
-.navbar-grande {
-  background-color: rgba(0, 0, 0, 0.5);
-  max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0 7%;
-}
-
-nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-nav li {
-  text-align: center;
-  padding: 2% 2%;
-  font-family: "Baskervville SC", serif;
-  font-weight: 400;
-  font-style: normal;
-  float: right;
-  border-left: 1px white solid;
-  font-size: 18px;
-}
-
-/*BOTONES*/
-.fill:focus, .fill:hover {
-  box-shadow: inset 0 0 0 2em var(--hover);
-}
-
-.fill {
-  --color:#ffffff;
-  --hover: #66f3ad;
-}
-
-button {
-  color: var(--color);
-  transition: 0.25s;
-  font-size: 18px;
-  align-items: center;
-}
-
-button:focus, button:hover {
-  border-color: var(--hover);
-  color: #000007;
-  margin-top: 2%;
-}
-
-.radius {
-  background: 0 0;
-  font-size: inherit;
-  line-height: 1;
-  padding: 1em 2em;
-  border-radius: 20px;
-}
-
-.nav a {
-  margin-top: 2%;
-}
-
-/*DESCUENTO*/
-h2 {
-  text-align: center;
-  font-family: "Baskervville SC", serif;
-  font-weight: 400px;
-  font-size: 100px;
-  padding: 2% 0;
-  background-color: rgba(207, 207, 207, 0.4);
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.descuento {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: transparent;
-  padding: 0 2%;
-}
-
-.lista {
-  padding-top: 5%;
-  padding-bottom: 5%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.producto {
-  width: 280px;
-  height: 400px;
-  background-color: #ffffff;
-  text-align: center;
-  padding-left: 1%;
-  padding-right: 1%;
-  padding-bottom: 5%;
-  padding-top: 2%;
-  font-size: 19px;
-  border-radius: 10px;
-  transition: 0.5s;
-  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
-}
-.producto.producto:hover {
-  transform: scale(1.1);
-  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
-}
-
-.producto img {
-  width: 190px;
-  height: 210px;
-}
-
-/*FOOTER*/
-.footer {
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #ffffff;
-  margin-top: 5%;
-  padding: 0.5%;
-  font-family: "Baskervville SC", serif;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  box-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
-}
-
-.footer p {
-  font-size: 20px;
-}
-
-.footer ul li {
-  list-style: none;
-}
-
-.mapa p {
-  text-align: center;
-  padding: 5px;
-}
-
-.mapa iframe {
-  width: 600px;
-  height: 280px;
-}
-
-.redes {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-/*VETERINARIAS*/
 #veterinarias {
   width: 100%;
   height: 90%;
@@ -283,7 +48,44 @@ h2 {
   padding-top: 2%;
 }
 
-/*SOBRE NOSOTROS*/
+#veterinarias h3 {
+  color: #ffffff;
+}
+
+#product-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.sectores {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.productos {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 6px 0 rgba(163, 158, 158, 0.8);
+  width: 300px;
+  height: 400px;
+  margin: 2%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.productos img {
+  width: 90%;
+  height: 60%;
+  margin: 2%;
+  border-radius: 10px;
+}
+
+.productos:hover {
+  transform: scale(1.1);
+  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
+  color: black;
+}
+
 #grid-nosotros {
   display: grid;
   height: 90%;
@@ -323,7 +125,6 @@ h2 {
   grid-area: a1;
 }
 
-/*REFUGIOS*/
 .faster .carousel-inner {
   transition: 10s;
 }
@@ -337,7 +138,7 @@ h2 {
 }
 
 .flex-container .btn {
-  background-color: #f5f5fd;
+  background-color: #4646df;
   color: #ffffff;
 }
 
@@ -346,42 +147,6 @@ h2 {
   color: #040453;
 }
 
-/*PRODUCTOS*/
-#product-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.sectores {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.productos {
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 0 6px 0 rgba(163, 158, 158, 0.8);
-  width: 25%;
-  height: 300px;
-  margin: 2%;
-  border-radius: 10px;
-  text-align: center;
-}
-
-.productos img {
-  width: 90%;
-  height: 60%;
-  margin: 2%;
-  border-radius: 10px;
-}
-
-.productos:hover {
-  transform: scale(1.1);
-  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
-  color: black;
-}
-
-/*CONTACTO*/
 .form-container {
   width: 100%;
   height: 650px;
@@ -409,8 +174,12 @@ form {
   width: 100%;
   margin: auto;
 }
-
 form .grupo {
+  position: relative;
+  margin: 45px;
+}
+
+.grupo {
   position: relative;
   margin: 45px;
 }
@@ -507,6 +276,246 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
     width: 90%;
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Baskervville SC", serif;
+}
+
+body {
+  background-image: linear-gradient(to right, rgb(7, 7, 99), rgb(255, 148, 8));
+  width: 100%;
+}
+
+header {
+  width: 100%;
+}
+
+/*CARRUSEL*/
+.carousel {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  padding: 0% 2%;
+}
+
+.carousel ul {
+  display: flex;
+  padding: 0;
+  width: 400%;
+  animation: slide 15s infinite alternate ease-in-out;
+}
+
+.carousel li {
+  width: 100%;
+  list-style: none;
+  position: relative;
+}
+
+.carousel img {
+  width: 100%;
+  height: 590px;
+  align-items: center;
+}
+
+@keyframes slide {
+  0% {
+    margin-left: 0;
+  }
+  20% {
+    margin-left: 0;
+  }
+  25% {
+    margin-left: -100%;
+  }
+  45% {
+    margin-left: -100%;
+  }
+  50% {
+    margin-left: -200%;
+  }
+  70% {
+    margin-left: -200%;
+  }
+  75% {
+    margin-left: -300%;
+  }
+  100% {
+    margin-left: -300%;
+  }
+}
+/*TITULO*/
+.titulo {
+  font-size: 55px;
+  color: #66f3ad;
+  text-align: center;
+  float: left;
+  text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
+  animation-duration: 2s;
+}
+
+/*BARRA DE NAVEGACION*/
+#navbar {
+  display: none;
+}
+
+.navbar-grande {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 110px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2% 7%;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+nav li {
+  text-align: center;
+  padding: 0% 2%;
+  font-family: "Baskervville SC", serif;
+  font-weight: 400;
+  font-style: normal;
+  float: right;
+  border-left: 1px white solid;
+  font-size: 18px;
+}
+
+/*BOTONES*/
+.fill:focus, .fill:hover {
+  box-shadow: inset 0 0 0 2em var(--hover);
+}
+
+.fill {
+  --color:#ffffff;
+  --hover: #66f3ad;
+}
+
+button {
+  color: var(--color);
+  transition: 0.75s;
+  font-size: 18px;
+  align-items: center;
+}
+
+button:focus, button:hover {
+  border-color: var(--hover);
+  color: #000007;
+  margin-top: 2%;
+}
+
+.radius {
+  background: 0 0;
+  font-size: inherit;
+  line-height: 1;
+  padding: 1em 2em;
+  border-radius: 20px;
+}
+
+.nav a {
+  margin-top: 2%;
+}
+
+/*DESCUENTO*/
+h2 {
+  text-align: center;
+  font-family: "Baskervville SC", serif;
+  font-weight: 400px;
+  font-size: 100px;
+  padding: 2% 0;
+  background-color: rgba(207, 207, 207, 0.4);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.descuento {
+  background: transparent;
+  padding: 0 2%;
+}
+
+.lista {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.producto {
+  width: 250px;
+  height: 370px;
+  background-color: #ffffff;
+  text-align: center;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 5%;
+  padding-top: 2%;
+  font-size: 19px;
+  border-radius: 10px;
+  transition: 0.5s;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+}
+.producto:hover {
+  transform: scale(1.1);
+  background-image: linear-gradient(rgb(226, 109, 255), rgb(101, 247, 101));
+}
+
+.producto img {
+  width: 190px;
+  height: 210px;
+}
+
+.producto p {
+  margin-bottom: 5%;
+}
+
+/*FOOTER*/
+.footer {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+  margin-top: 5%;
+  padding: 0.5%;
+  font-family: "Baskervville SC", serif;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  box-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
+}
+
+.footer p {
+  font-size: 20px;
+}
+
+.footer ul li {
+  list-style: none;
+}
+
+.mapa p {
+  text-align: center;
+  padding: 5px;
+}
+
+.mapa iframe {
+  width: 600px;
+  height: 280px;
+}
+
+.redes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 /* RESPONSIVE  */
 @media (max-width: 1300px) {
   /* NAVBAR*/
@@ -528,7 +537,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   .offcanvas-header {
     background-color: rgba(169, 233, 206, 0.9);
   }
-  .nav-item :hover {
+  .nav-item:hover {
     border-radius: 20px;
     background-color: rgba(102, 243, 173, 0.7);
     transition: 1s;
@@ -591,27 +600,38 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
     justify-content: center;
     flex-direction: column;
     background-color: rgba(218, 252, 236, 0.8);
-    padding: 0% 2%;
+    padding: 0%;
   }
-  .lista {
+  .descuento .lista {
+    width: 100%;
     padding-top: 5%;
     padding-bottom: 5%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
   .producto {
     margin-bottom: 5%;
-    width: 500px;
-    height: 500px;
+    margin-left: 2%;
+    width: 90%;
+    height: 400px;
+    font-size: 12px;
   }
   .producto img {
-    width: 350px;
-    height: 340px;
+    width: 80%;
+    height: 300px;
   }
   .producto p {
-    font-size: 120%;
+    font-size: 20px;
+  }
+  .producto:hover {
+    transform: none;
+    background-image: linear-gradient(rgb(226, 109, 255), rgb(101, 247, 101));
+  }
+  .producto:active {
+    background-image: linear-gradient(rgba(255, 136, 0, 0.5), rgba(109, 102, 94, 0.5));
   }
   /* FOOTER*/
   .footer {
@@ -620,7 +640,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
     justify-content: space-around;
   }
   .footer p {
-    font-size: 20px0px;
+    font-size: 20px;
     text-align: center;
   }
   .footer ul li {
@@ -634,7 +654,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   }
   .mapa iframe {
     width: 100%;
-    height: 200px;
+    height: 300px;
   }
   .redes {
     display: flex;
@@ -717,13 +737,17 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
     align-items: center;
     margin-left: 15%;
     width: 100%;
+    height: 370px;
+  }
+  .productos:active {
+    background-image: linear-gradient(rgba(255, 165, 0, 0.5), rgba(122, 106, 106, 0.5));
   }
   #product-container .productos p {
     font-size: 18px;
   }
   .productos img {
     width: 90%;
-    height: 180px;
+    height: 280px;
     padding: 1%;
   }
 }
