--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,10 @@
   background-color: transparent;
   padding: 8% 0%;
 }
+#grid-nosotros h3 {
+  color: #ffffff;
+  text-align: center;
+}
 
 #grid-nosotros img {
   width: 490px;
@@ -695,6 +699,9 @@ h2 {
     display: flex;
     flex-direction: column;
     width: 100%;
+  }
+  #grid-nosotros h2 {
+    margin-top: 15%;
   }
   #grid-nosotros p {
     padding-left: 3%;
