--- a/scss/aboutus.scss
+++ b/scss/aboutus.scss
@@ -6,6 +6,11 @@
     grid-template-areas: "a1 a2" "a1 a3" "a1 a4";
     background-color: transparent;
     padding: 8% 0%;
+
+    h3{
+      color: #ffffff;
+      text-align: center;
+    }
   }
   
   #grid-nosotros img {
