--- a/css/contacto.css
+++ b/css/contacto.css
@@ -92,7 +92,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
 
 .bt-form {
   background: #fc5c7d;
-  background: linear-gradient(to right, #f290ff, #2dff03);
+  background: linear-gradient(to right, #bb57c9, #ffa703);
   display: block;
   width: 200px;
   height: 60px;
@@ -104,8 +104,9 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   cursor: pointer;
   box-shadow: 1px 2px 2px black, 0 0 25px rgb(253, 253, 253), 0 0 5px rgb(30, 43, 219);
 }
-.bt-form a {
-  text-decoration: none;
+.bt-form:hover {
+  transform: scale(1.1);
+  color: #ffffff;
 }
 
 @media screen and (max-width: 1000px) {
