--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
 
 .bt-form {
   background: #fc5c7d;
-  background: linear-gradient(to right, #f290ff, #2dff03);
+  background: linear-gradient(to right, #bb57c9, #ffa703);
   display: block;
   width: 200px;
   height: 60px;
@@ -257,8 +257,9 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   cursor: pointer;
   box-shadow: 1px 2px 2px black, 0 0 25px rgb(253, 253, 253), 0 0 5px rgb(30, 43, 219);
 }
-.bt-form a {
-  text-decoration: none;
+.bt-form:hover {
+  transform: scale(1.1);
+  color: #ffffff;
 }
 
 @media screen and (max-width: 1000px) {
@@ -291,7 +292,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
 
 body {
   background-image: linear-gradient(to right, rgb(11, 11, 160), rgb(255, 148, 8));
-  width: 100%;
+  width: 99%;
 }
 
 header {
@@ -303,7 +304,6 @@ header {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  padding: 0% 2%;
 }
 
 .carousel ul {
@@ -317,12 +317,14 @@ header {
   width: 100%;
   list-style: none;
   position: relative;
+  margin-left: 0.5%;
 }
 
 .carousel img {
   width: 100%;
   height: 590px;
   align-items: center;
+  border-radius: 15px;
 }
 
 @keyframes slide {
@@ -368,12 +370,12 @@ header {
 
 .navbar-grande {
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
+  width: 101%;
   height: 110px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2% 7%;
+  padding: 2% 8%;
 }
 
 nav ul {
