--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -23,7 +23,7 @@
     @if $este-curso-es-increible == True{ 
         body { 
             background-image: linear-gradient(to right, rgb(11, 11, 160), rgb(255, 148, 8));
-            width: 100%;
+            width: 99%;
            
             
          }
@@ -45,7 +45,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding: 0% 2%;
+    
     
   }
 
@@ -61,14 +61,14 @@
     width: 100%;
     list-style: none;
     position: relative;
-    
+    margin-left: 0.5%;
   }
 
   .carousel img {
     width: 100%;
     height: 590px;
     align-items: center;
-   
+    border-radius: 15px;
   }
   
   @keyframes slide {
@@ -141,12 +141,12 @@
 
 .navbar-grande{
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
+  width: 101%;
   height: 110px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2% 7%;
+  padding: 2% 8%;
  
   
 
