--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -126,6 +126,13 @@
     }
  }
 
+ .form-container .bt-form{
+    width: 170px;
+    height: 40px;
+    font-size: 22px;
+
+ }
+
 
 @media screen and (max-width:1000px) {
   .form{
