--- a/css/contacto.css
+++ b/css/contacto.css
@@ -109,6 +109,12 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   color: #ffffff;
 }
 
+.form-container .bt-form {
+  width: 170px;
+  height: 40px;
+  font-size: 22px;
+}
+
 @media screen and (max-width: 1000px) {
   .form {
     width: 50%;
