--- a/css/styles.css
+++ b/css/styles.css
@@ -263,6 +263,12 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   color: #ffffff;
 }
 
+.form-container .bt-form {
+  width: 170px;
+  height: 40px;
+  font-size: 22px;
+}
+
 @media screen and (max-width: 1000px) {
   .form {
     width: 50%;
@@ -767,6 +773,9 @@ h2 {
     width: 90%;
     height: 280px;
     padding: 1%;
+  }
+  .form-container {
+    margin-top: 15%;
   }
 }
 
