--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -519,9 +519,10 @@ h2{
     
 
     #veterinarias section img {
-      width: 100%;
+      width: 90%;
       height: 250px;
       margin: 0;
+      margin-left: 5%;
     }
     #veterinarias section {
       width: 100%;
